[package]
name = "xcolabel"
version = "0.2.0"
edition = "2021"

authors = ["Yuki Yamaura <ymruki@gmail.com>"]
license = "MIT"
description = "Convert between column label to 0-based number"
homepage = "https://github.com/yamaura/xcolabel"
repository = "https://github.com/yamaura/xcolabel"
readme = "README.md"
keywords = []
categories = []
include = ["src/**/*.rs", "README.md", "LICENSE"]

[package.metadata.release]
push = false
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[dependencies]
num = { version = "0.4", default-features = false }
